<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.activity.HomeActivity"
    android:padding="20dp"
    android:orientation="vertical">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="15dp"
        android:textStyle="bold"
        android:textAlignment="center"
        android:text="@string/home_meuperfil"/>
    <LinearLayout
        android:paddingBottom="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:orientation="horizontal"
        android:gravity="center">
        <de.hdodenhof.circleimageview.CircleImageView
            android:layout_width="@dimen/icone_profile"
            android:layout_height="@dimen/icone_profile"
            app:civ_border_width="2dp"
            app:civ_border_color="#FF000000"
            android:id="@+id/imgusericon"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:orientation="vertical"
            android:gravity="center">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="25dp"
                android:textStyle="bold"
                android:textAlignment="viewStart"
                android:id="@+id/txtusername"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="15dp"
                android:textStyle="bold"
                android:textAlignment="viewStart"
                android:textColor="@color/purple"
                android:id="@+id/txtusercity"/>
        </LinearLayout>
    </LinearLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="15dp"
        android:textStyle="bold"
        android:textAlignment="viewStart"
        android:text="@string/home_status"
        android:background="@drawable/frame_bottom"
        android:paddingBottom="5dp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="10dp"
        android:paddingBottom="10dp">

        <TextView
            android:id="@+id/txtprioritem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="25dp"
            android:textStyle="bold"
            android:textAlignment="center"
            android:layout_weight="1"
            android:text="@string/home_prior_item"/>

        <TextView
            android:id="@+id/txtitemdescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="15dp"
            android:textStyle="bold"
            android:textAlignment="center"
            android:layout_gravity="center"
            android:layout_weight="0.4"/>

        <TextView
            android:id="@+id/txtnextitem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="25dp"
            android:textStyle="bold"
            android:textAlignment="center"
            android:layout_weight="1"
            android:text="@string/home_next_item"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:paddingStart="15dp"
        android:paddingEnd="15dp">
        <ListView
            android:id="@+id/lststatus"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/viewassinaturas"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        android:background="@drawable/frame_bottom">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="15dp"
            android:textStyle="bold"
            android:textAlignment="viewStart"
            android:layout_weight="0.1"
            android:text="@string/home_assinaturas"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="25dp"
            android:textStyle="bold"
            android:textColor="@color/gray"
            android:textAlignment="center"
            android:layout_weight="1"
            android:text="@string/home_next_item"/>

    </LinearLayout>
    <LinearLayout
        android:id="@+id/viewsair"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@drawable/frame_bottom"
        android:layout_marginTop="20dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="15dp"
            android:textStyle="bold"
            android:textAlignment="viewStart"
            android:layout_weight="0.1"
            android:text="@string/home_sair"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="25dp"
            android:textStyle="bold"
            android:textColor="@color/gray"
            android:textAlignment="center"
            android:layout_weight="1"
            android:text="@string/home_next_item"/>

    </LinearLayout>
</LinearLayout>