<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activity.LoginActivity"
    android:background="@drawable/login_backgroud"

    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:gravity="center">
        <ImageView
            android:layout_width="@dimen/icone_login"
            android:layout_height="@dimen/icone_login"
            android:src="@drawable/liveon_logo"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:paddingStart="15dp"
        android:paddingEnd="15dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:background="@null"
                android:textAlignment="center">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingBottom="15dp">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/text_email"
                        android:textSize="@dimen/fontsize_small"
                        android:textStyle="bold"
                        android:textColor="@color/gray"
                        android:layout_marginStart="10dp" />
                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/login_edit_email"
                        android:layout_gravity="center"
                        android:selectAllOnFocus="true"
                        android:layout_marginStart="5dp"
                        android:layout_marginTop="2dp"
                        android:layout_marginEnd="2dp"
                        android:layout_marginBottom="2dp"
                        android:inputType="textEmailAddress"
                        android:textSize="@dimen/fontsize_large"
                        android:singleLine="true"
                        android:textColor="@color/white"
                        android:background="@drawable/frame_bottom"/>
                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingBottom="15dp">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/text_senha"
                        android:textSize="@dimen/fontsize_small"
                        android:textStyle="bold"
                        android:textColor="@color/gray"
                        android:layout_marginStart="10dp"/>
                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/login_edit_senha"
                        android:textSize="@dimen/fontsize_large"
                        android:layout_gravity="center"
                        android:inputType="textPassword"
                        android:selectAllOnFocus="true"
                        android:layout_marginStart="5dp"
                        android:layout_marginTop="2dp"
                        android:layout_marginEnd="2dp"
                        android:layout_marginBottom="2dp"

                        android:singleLine="true"
                        android:textColor="@color/white"
                        android:imeOptions="actionDone"
                        android:background="@drawable/frame_bottom"/>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <Button
                android:text="@string/button_login"
                android:id="@+id/login_button_login"
                android:layout_width="match_parent"
                android:layout_height="42sp"
                android:layout_marginTop="20dp"
                android:textSize="@dimen/fontsize_medium"
                android:background="@drawable/roundstyle"
                android:textColor="@color/white"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>