<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.activity.OrderDetailsActivity"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:background="@color/back_gray">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="10dp"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:orientation="vertical"
            android:gravity="center">
            <com.smarteist.autoimageslider.SliderView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/imgSlider"
                android:layout_centerInParent="true"
                app:sliderAnimationDuration="600"
                app:sliderAutoCycleDirection="back_and_forth"
                app:sliderIndicatorAnimationDuration="600"
                app:sliderIndicatorEnabled="true"
                app:sliderIndicatorGravity="center_horizontal|bottom"
                app:sliderIndicatorMargin="15dp"
                app:sliderIndicatorOrientation="horizontal"
                app:sliderIndicatorPadding="3dp"
                app:sliderIndicatorRadius="2dp"
                app:sliderIndicatorSelectedColor="#5A5A5A"
                app:sliderIndicatorUnselectedColor="#FFF"
                app:sliderScrollTimeInSec="1" />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@color/white">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginStart="35dp"
                android:layout_marginEnd="35dp">
                <TextView
                    android:id="@+id/txtmarca"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/fontsize_large"
                    android:layout_weight="1"
                    android:textStyle="bold"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Mensalidade"
                    android:textAlignment="textEnd"
                    android:layout_weight="1"
                    android:textSize="@dimen/fontsize_small"
                    android:textStyle="bold"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginStart="35dp"
                android:layout_marginEnd="35dp">
                <TextView
                    android:id="@+id/txtmodelo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="30sp"
                    android:textColor="@color/purple"
                    android:layout_weight="1"
                    android:textStyle="bold"/>
                <TextView
                    android:id="@+id/txtmensalidade"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAlignment="textEnd"
                    android:layout_weight="1"
                    android:textSize="30sp"
                    android:textColor="@color/purple"
                    android:textStyle="bold"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:paddingTop="15dp"
                android:orientation="horizontal"
                android:layout_marginStart="35dp"
                android:layout_marginEnd="35dp">
                <TextView
                    android:id="@+id/txtfuel"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:textAlignment="center"
                    android:textSize="@dimen/fontsize_large"
                    android:layout_weight="1"
                    android:textStyle="bold"
                    android:background="@drawable/frame_bottom_right"/>
                <TextView
                    android:id="@+id/txtdoors"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:textAlignment="center"
                    android:layout_weight="1"
                    android:textSize="@dimen/fontsize_large"
                    android:background="@drawable/frame_bottom"
                    android:textStyle="bold"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:orientation="horizontal"
                android:layout_marginStart="35dp"
                android:layout_marginEnd="35dp">
                <TextView
                    android:id="@+id/txtenginetype"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:textAlignment="center"
                    android:textSize="@dimen/fontsize_large"
                    android:layout_weight="1"
                    android:textStyle="bold"
                    android:background="@drawable/frame_right"/>
                <TextView
                    android:id="@+id/txtengine"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:textAlignment="center"
                    android:layout_weight="1"
                    android:textSize="@dimen/fontsize_large"
                    android:textStyle="bold"/>
            </LinearLayout>
        </LinearLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="viewStart"
            android:layout_marginStart="35dp"
            android:layout_marginEnd="35dp"
            android:layout_marginTop="15dp"
            android:textSize="@dimen/fontsize_large"
            android:background="@drawable/frame_bottom"
            android:text="@string/orderdetails_signaturedetails"
            android:textStyle="bold"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:layout_marginStart="35dp"
            android:layout_marginEnd="35dp"
            android:layout_marginTop="15dp"
            android:orientation="vertical"
            android:background="@drawable/edgetyle">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:orientation="horizontal"
                android:layout_weight="0">
                <TextView
                    android:id="@+id/txtmonths"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:textAlignment="center"
                    android:textSize="25sp"
                    android:layout_weight="1"
                    android:textStyle="bold"
                    android:background="@drawable/frame_right"/>

                <TextView
                    android:id="@+id/txtplantype"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:textAlignment="center"
                    android:textSize="25sp"
                    android:layout_weight="1"
                    android:textStyle="bold"
                    android:background="@drawable/frame_right"/>

                <TextView
                    android:id="@+id/txtadditionalfranchise"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:textAlignment="center"
                    android:textSize="20sp"
                    android:layout_weight="1"
                    android:textStyle="bold"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:layout_weight="1">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/orderdetails_months"
                    android:textAlignment="center"
                    android:textSize="@dimen/fontsize_small"
                    android:layout_weight="1"

                    android:background="@drawable/frame_right"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/orderdetails_months"
                    android:textAlignment="center"
                    android:textSize="@dimen/fontsize_small"
                    android:layout_weight="1"

                    android:background="@drawable/frame_right"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/orderdetails_additionalfranchise"
                    android:textAlignment="center"
                    android:textSize="@dimen/fontsize_small"
                    android:layout_weight="1"/>
            </LinearLayout>
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="viewStart"
            android:layout_marginStart="35dp"
            android:layout_marginEnd="35dp"
            android:layout_marginTop="15dp"
            android:textSize="@dimen/fontsize_large"
            android:background="@drawable/frame_bottom"
            android:text="@string/orderdetails_signaturevalues"
            android:textStyle="bold"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="35dp"
        android:layout_marginEnd="35dp"
        android:layout_marginTop="15dp"
        android:orientation="vertical"
        android:background="@drawable/edgetyle">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="15dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_weight="1">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/orderdetails_monthlyprice"
                android:textSize="@dimen/fontsize_large"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/txtmontlyprice"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="viewEnd"
                android:textSize="@dimen/fontsize_large"
                android:textStyle="bold"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="15dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_weight="1">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/orderdetails_extrasprice"
                android:textSize="@dimen/fontsize_large"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/txtextrasprice"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="viewEnd"
                android:textSize="@dimen/fontsize_large"
                android:textStyle="bold"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="15dp"
            android:layout_marginStart="10dp"
            android:paddingBottom="10dp"
            android:layout_marginEnd="10dp"
            android:layout_weight="1">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/orderdetails_totalprice"
                android:textSize="@dimen/fontsize_large"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/txttotalprice"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="viewEnd"
                android:textSize="@dimen/fontsize_large"
                android:textStyle="bold"/>
        </LinearLayout>


    </LinearLayout>



    </LinearLayout>
</ScrollView>